[gd_scene load_steps=9 format=2]

[ext_resource path="res://DOOR/door4.png" type="Texture" id=1]
[ext_resource path="res://DOOR/door1.png" type="Texture" id=2]
[ext_resource path="res://DOOR/door2.png" type="Texture" id=3]
[ext_resource path="res://DOOR/door3.png" type="Texture" id=4]
[ext_resource path="res://DOOR/door5.png" type="Texture" id=5]
[ext_resource path="res://Script/script_porta.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": false,
"name": "fecharporta",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 5 ) ],
"loop": false,
"name": "abrindoporta",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="fim" type="Area2D" parent="."]

[node name="porta" type="AnimatedSprite" parent="fim"]
scale = Vector2( 0.52, 0.52 )
frames = SubResource( 1 )
animation = "fecharporta"
frame = 4

[node name="fim" type="CollisionShape2D" parent="fim"]
position = Vector2( -4.49493, 8.24069 )
rotation = 3.14159
scale = Vector2( 11.1888, 11.1888 )
shape = SubResource( 2 )

[node name="area2d_ativar" type="Area2D" parent="."]

[node name="ativaranimacao" type="CollisionShape2D" parent="area2d_ativar"]
position = Vector2( -67.7345, -11.5807 )
rotation = -3.14159
scale = Vector2( 44.2746, 13.3139 )
shape = SubResource( 2 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="body_entered" from="fim" to="." method="fim_jogo"]
[connection signal="body_entered" from="area2d_ativar" to="." method="ativar_porta"]
[connection signal="body_exited" from="area2d_ativar" to="." method="_on_area2d_ativar_body_exited"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
